--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: maxzxy
-github_username:  maxzxy
+twitter_username: zxymax
+github_username:  zxymax
 
 # Build settings
 markdown: kramdown
